--- a/_posts/2019-01-27-Nao.md
+++ b/_posts/2019-01-27-Nao.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Software Engineer -  Nao"
-description: "The first 'Hello world' post for Simple Texture theme."
+description: "The first 'Hello world' post for Simple Texture theme"
 categories: [uncategorized]
 tags: [random, jekyll]
 redirect_from:
