--- a/_posts/2019-01-27-Nao.md
+++ b/_posts/2019-01-27-Nao.md
@@ -6,4 +6,4 @@ categories: [uncategorized]
 tags: [random, jekyll]
 redirect_from:
 ---
-Hello World! This is the beginning of this theme.
+I'm Nao, a software engineer of Cero.
