--- a/_posts/2019-01-27-Patricia.md
+++ b/_posts/2019-01-27-Patricia.md
@@ -7,5 +7,8 @@ tags: [random, jekyll]
 redirect_from:
 ---
 
+<img src="https://github.com/team-cero/team-cero.github.io/blob/master/assets/images/patricia.png?raw=true" height ="180" width="150">
+
+
 # Patricia
 # UI/UX Designer
