--- a/_posts/2020-01-27-Negi.md
+++ b/_posts/2020-01-27-Negi.md
@@ -1,14 +1,14 @@
-<!-- Add icon library -->
-<link rel="stylesheet" href="assets/stylesheets/negi.css">
+layout: post
+title: "Dhanraj Negi"
+description: "The first 'Hello world' post for Simple Texture theme."
+categories: [uncategorized]
+tags: [random, jekyll]
+redirect_from:
+---
 
-<div class="card">
-  <img src="https://github.com/team-cero/team-cero.github.io/blob/master/assets/images/negi.jpg?raw=true" alt="negi" width="200" height="200">
-  <h1>Dhanraj Negi</h1>
-  <p class="title">AI Engineer</p>
-  <p>Digital Product School</p>
-  <a href="https://facebook.com/rahulnegi004"><i class="fa fa-dribbble"></i></a>
-  <a href="#"><i class="fa fa-twitter"></i></a>
-  <a href="#"><i class="fa fa-linkedin"></i></a>
-  <a href="#"><i class="fa fa-facebook"></i></a>
-  <p><button>Contact</button></p>
-</div>
+<img src="https://github.com/team-cero/team-cero.github.io/blob/master/assets/images/negi.jpg?raw=true" alt="negi"  height ="200" width="200">
+
+
+# Dhanraj Negi
+# AI Engineer 
+
