i added my nick name

--- a/_posts/2020-01-27-Negi.md
+++ b/_posts/2020-01-27-Negi.md
@@ -9,6 +9,6 @@ redirect_from:
 <img src="https://github.com/team-cero/team-cero.github.io/blob/master/assets/images/negi.jpg?raw=true" alt="negi"  height ="200" width="200">
 
 
-# Dhanraj Negi
+# Dhanraj Negi (Negi)
 # AI Engineer 
 
